Perkin-UAT/force-app/main/default/objects/Contact_Role__c/fields/FCO_Type__c.field-meta.xml
<CustomField>
    <fullName>FCO_Type__c</fullName>
    <label>FCO Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Important Field Safety Notice</fullName>
            </value>
            <value>
                <fullName>Important Field Safety Modification</fullName>
            </value>
            <value>
                <fullName>Important User Notice</fullName>
            </value>
            <value>
                <fullName>Important Product Modification</fullName>
            </value>
            <value>
                <fullName>Product Bulletin</fullName>
            </value>
            <value>
                <fullName>Product Modification</fullName>
            </value>
            <value>
                <fullName>Product Recommendation</fullName>
            </value>
            <value>
                <fullName>Internal Information Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>