Perkin-UAT/force-app/main/default/objects/Contact_Role__c/fields/Language_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>Language_Correspondence__c</fullName>
    <label>Language Correspondence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Flemish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>