Perkin-UAT/force-app/main/default/objects/Contact_Role__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location</description>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Contact Roles</relationshipLabel>
    <relationshipName>Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>