Perkin-UAT/force-app/main/default/objects/Contact_Role__c/fields/Portal_Access_Level_Install_Base__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Level_Install_Base__c</fullName>
    <label>Portal Access Level – Install Base</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>