Perkin-UAT/force-app/main/default/objects/Contact_Role__c/fields/Primary_Language_for_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language_for_Correspondence__c</fullName>
    <label>Primary Language for Correspondence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Flemish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>