Perkin-UAT/force-app/main/default/objects/Contact_Role__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>TextArea</type>
</CustomField>