Perkin-UAT/force-app/main/default/objects/Contact_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>External Customer Portal User</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>